--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@
 language: python
 python: "2.7"
 before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq python-apt python-pycurl
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq python-apt python-pycurl
 install:
-  - pip install https://github.com/ansible/ansible/archive/devel.zip
+#  - sudo pip install --no-use-wheel https://github.com/ansible/ansible/archive/devel.zip
+  - sudo pip install ansible
 script:
   - ansible --version
   - export ANSIBLE_ROLES_PATH="../"
