--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - sudo pip install ansible
 script:
   - ansible --version
-  - export ANSIBLE_ROLES_PATH="../"
+#  - export ANSIBLE_ROLES_PATH="../"
   - echo localhost > inventory
   - ansible-playbook -i inventory --syntax-check zfs.yml
   - ansible-playbook -i inventory --connection=local --sudo -vvvv zfs.yml
