--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,11 @@
 ---
+dependencies: []
 
 galaxy_info:
   author: Alban Andrieu
   description: A role for installing zfs
   company: Nabla
-  license: MIT
+  license: GPLv3
   min_ansible_version: 1.6.3
   platforms:
   - name: Ubuntu
@@ -23,5 +24,26 @@ galaxy_info:
   - cloud
   - development
   - system
-dependencies: []
 
+ansigenome_info:
+  galaxy_id: '1175'
+  galaxy_user:  'alban.andrieu'
+
+  travis: True
+
+  authors:
+    - name:  'Alban Andrieu'
+      url: 'fr.linkedin.com/in/nabla/'
+      email: 'alban.andrieu@free.fr'
+      twitter: 'AlbanAndrieu'
+      github: 'AlbanAndrieu'
+      
+  synopsis: |
+    This ``Simple`` role allows you to install [ZFS](http://fr.wikipedia.org/wiki/ZFS) file system 
+    which can be used to easily snapshot/rollback huge amount of data on your workstation.   
+
+  usage: |
+    Describe how to use in more detail...
+
+  #custom: |
+  #  Any custom output you want after the usage section..
