--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -26,6 +26,23 @@
      - grub2-common
      - grub-pc
      - zfs-dkms
+  register: package_result
+
+- name: Reboot instance
+  command: /sbin/shutdown -r now
+  register: reboot_result
+  when: "package_result|changed"
+
+- name: Wait for instance to come online (10 minute timeout)
+  sudo: false
+  local_action:
+    module: wait_for
+    host: "{{ ansible_ssh_host|default(inventory_hostname) }}"
+    port: "{{ ansible_ssh_port|default(ssh_port) }}"
+    delay: 30
+    timeout: 600
+    state: started
+  when: "package_result|changed"
 
 #sudo apt-get install --no-install-recommends linux-image-generic linux-headers-generic
 
