--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,4 @@
 zfs_enabled: yes                       # Enable module
 zfs_pool: rpool
+# Important if running Ubuntu 12.04-13.10 and ssh on a non-standard port
+ssh_port: 22
