--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -31,7 +31,7 @@
 - name: Reboot instance
   command: /sbin/shutdown -r now
   register: reboot_result
-  when: "package_result|changed" and reboot_enabled"
+  when: "package_result|changed and reboot_enabled"
 
 - name: Wait for instance to come online (10 minute timeout)
   sudo: false
