Reboot is required to go further

--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -48,15 +48,19 @@
 
 - name: Create a zfs file system
   action: zfs name={{ zfs_pool }}/home state=present
+  when: reboot_enabled
 
 - name: Create a zfs file system with quota of 10GiB and visible snapdir
   action: zfs name={{ zfs_pool }}/jenkins quota='10G' snapdir=visible state=present
+  when: reboot_enabled
 
 - name: Crate zfs snapshot of the above file system
   action: zfs name={{ zfs_pool }}/jenkins@initial-snapshot state=present
+  when: reboot_enabled
 
 - name: Create zfs volume named log with a size of 10MiB
   action: zfs name={{ zfs_pool }}/log volsize=10M state=present
+  when: reboot_enabled
 
 #- name: Removes snapshot of rpool/oldfs
 #  action: zfs name={{ zfs_pool }}/oldfs@oldsnapshot state=absent
