--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
   - sudo ansible --version
   - export ANSIBLE_ROLES_PATH="../"
 #  - echo localhost > inventory
-  - ansible-playbook -i inventory --syntax-check zfs.yml
-  - ansible-playbook -i inventory --connection=local --sudo -vvvv zfs.yml
+  - ansible-playbook -i hosts --syntax-check zfs.yml
+  - ansible-playbook -i hosts --connection=local --sudo -vvvv zfs.yml
