--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -12,7 +12,7 @@
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
   with_items:
      - ppa:zfs-native/stable
-     - ppa:zfs-native/grub
+#     - ppa:zfs-native/grub
 
 #TODO see https://docs.docker.com/engine/userguide/storagedriver/zfs-driver/
 - name: Install ZFS
