--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,9 @@
 ---
 # Handler to handle common notifications. Handlers are called by other plays.
 # See http://ansible.cc/docs/playbooks.html for more information about handlers.
+
+- name: Stop Docker
+  service: name=docker state=stoped
+
+- name: Start Docker
+  service: name=docker state=started
