--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -7,19 +7,24 @@
     msg: "{{ ansible_distribution_version }} is not an acceptable version of Ubuntu for this role"
   when: ansible_distribution_version|version_compare(12.04, '<') or ansible_distribution_version|version_compare(12.10, '=')
 
-- name:  Uninstall dkms packages
-  apt: >
-    pkg={{ item }}
-    state=absent
-    purge=yes
-    force=yes
-  sudo : yes
-  with_items:
-    - dkms
-    - zfs-dkms
-    - spl-dkms
-    - ubuntu-zfs
-    - virtualbox*
+- name: Stop docker
+  service:
+    name: docker
+    state: stoped
+
+#- name:  Uninstall dkms packages
+#  apt: >
+#    pkg={{ item }}
+#    state=absent
+#    purge=yes
+#    force=yes
+#  sudo : yes
+#  with_items:
+#    - dkms
+#    - zfs-dkms
+#    - spl-dkms
+#    - ubuntu-zfs
+#    - virtualbox*
 #sudo apt-get autoremove 'virtualbox*'
 
 #sudo apt-get install --no-install-recommends linux-image-generic linux-headers-generic
@@ -44,16 +49,16 @@
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
   with_items:
      - software-properties-common
-#     - debootstrap
-#     - zfs-initramfs
-#     - zfsutils
+     - debootstrap
+     - zfs-initramfs
+     - zfsutils
      - ubuntu-zfs
      #- zfs-fuse
-#     - grub2-common
-#     - grub-pc
-#     - spl
-#     - spl-dkms
-#     - zfs-dkms
+     - grub2-common
+     - grub-pc
+     - spl
+     - spl-dkms
+     - zfs-dkms
   register: package_result
 
 - name: Reboot instance
@@ -102,6 +107,9 @@
 #-O compression=gzip
 #  when: reboot_enabled
   sudo: yes
+
+#TODO check docker
+#sudo docker info
 
 - name: Create a zfs file system
   action: zfs name={{ zfs_pool }}/home state=present
