--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,4 +4,4 @@ zfs_docker_pool: zpool-docker
 zfs_docker_directory: /var/lib/docker
 # Important if running Ubuntu 12.04-13.10 and ssh on a non-standard port
 ssh_port: 22
-reboot_enabled: false
+reboot_enabled: yes
