--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -71,6 +71,7 @@
     purge=yes
     force=yes
     update_cache=yes
+    autoremove=yes
   sudo: yes
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
   with_items:
@@ -78,10 +79,7 @@
      - postgresql-9.2
      - postgresql-9.3
      - postgresql-9.4
-
-- name: Autoremove
-  apt: autoremove
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+     - postgresql-9.5
 
 - name: Upgrade dist
   apt: upgrade=dist update_cache=yes dpkg_options='force-confold,force-confdef' force=yes install_recommends=yes
