--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,26 +25,26 @@ galaxy_info:
   - development
   - system
 
-ansigenome_info:
-  galaxy_id: '1175'
-  galaxy_user: 'alban.andrieu'
-  galaxy_name: 'zfs'
-
-  travis: True
-
-  authors:
-    - name:  'Alban Andrieu'
-      url: 'fr.linkedin.com/in/nabla/'
-      email: 'alban.andrieu@free.fr'
-      twitter: 'AlbanAndrieu'
-      github: 'AlbanAndrieu'
-      
-  synopsis: |
-    This ``Simple`` role allows you to install [ZFS](http://fr.wikipedia.org/wiki/ZFS) file system 
-    which can be used to easily snapshot/rollback huge amount of data on your workstation.   
-
-  usage: |
-    Describe how to use in more detail...
-
-  #custom: |
-  #  Any custom output you want after the usage section..
+#ansigenome_info:
+#  galaxy_id: '1175'
+#  galaxy_user: 'alban.andrieu'
+#  galaxy_name: 'zfs'
+#
+#  travis: True
+#
+#  authors:
+#    - name:  'Alban Andrieu'
+#      url: 'fr.linkedin.com/in/nabla/'
+#      email: 'alban.andrieu@free.fr'
+#      twitter: 'AlbanAndrieu'
+#      github: 'AlbanAndrieu'
+#
+#  synopsis: |
+#    This ``Simple`` role allows you to install [ZFS](http://fr.wikipedia.org/wiki/ZFS) file system
+#    which can be used to easily snapshot/rollback huge amount of data on your workstation.
+#
+#  usage: |
+#    Describe how to use in more detail...
+#
+#  #custom: |
+#  #  Any custom output you want after the usage section..
