--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -64,22 +64,22 @@
   service: name=postgresql state=stopped
   sudo: yes
 
-- name: Uninstall postgresql
-  apt: >
-    pkg={{ item }}
-    state=absent
-    purge=yes
-    force=yes
-    update_cache=yes
-    autoremove=yes
-  sudo: yes
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-  with_items:
-     - postgresql-9.1
-     - postgresql-9.2
-     - postgresql-9.3
-     - postgresql-9.4
-     - postgresql-9.5
+#- name: Uninstall postgresql
+#  apt: >
+#    pkg={{ item }}
+#    state=absent
+#    purge=yes
+#    force=yes
+#    update_cache=yes
+#    autoremove=yes
+#  sudo: yes
+#  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+#  with_items:
+#     - postgresql-9.1
+#     - postgresql-9.2
+#     - postgresql-9.3
+#     - postgresql-9.4
+#     - postgresql-9.5
 
 - name: Upgrade safe
   apt: upgrade=safe update_cache=yes dpkg_options='force-confold,force-confdef' force=yes install_recommends=yes
