--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,3 +5,7 @@ zfs_docker_directory: /var/lib/docker
 # Important if running Ubuntu 12.04-13.10 and ssh on a non-standard port
 ssh_port: 22
 reboot_enabled: no
+
+jenkins_home: /var/lib/jenkins              # Jenkins home location
+jenkins_user: jenkins
+jenkins_group: jenkins
