--- a/meta/ansigenome.yml
+++ b/meta/ansigenome.yml
@@ -1,3 +1,29 @@
+---
+dependencies: []
+
+galaxy_info:
+  author: Alban Andrieu
+  description: A role for installing zfs
+  company: Nabla
+  license: GPLv3
+  min_ansible_version: 2.1.1
+  platforms:
+  - name: Ubuntu
+    versions:
+    - all
+    - lucid
+    - maverick
+    - natty
+    - oneiric
+    - precise
+    - quantal
+    - raring
+    - saucy
+    - trusty
+  categories:
+  - cloud
+  - development
+  - system
 
 ansigenome_info:
   galaxy_id: '1175'
