--- a/tasks/zfs.yml
+++ b/tasks/zfs.yml
@@ -110,7 +110,7 @@
   async: 1
   poll: 0
   register: reboot_result
-  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and ansible_distribution_version in ['12.04','14.04'] and "package_result|changed and reboot_enabled"
+  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and ansible_distribution_version in ['12.04','14.04'] and "package_result.changed and reboot_enabled"
 
 - name: Wait for instance to come online (10 minute timeout)
   become: false
@@ -121,12 +121,12 @@
     delay: 180
     timeout: 1200
     state: started
-  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and ansible_distribution_version in ['12.04','14.04'] and "package_result|changed and reboot_enabled"
+  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and ansible_distribution_version in ['12.04','14.04'] and "package_result.changed and reboot_enabled"
 
 - name: Check dkms
   command: /usr/sbin/dkms status
   register: dkms_result
-  when: "package_result|changed and not reboot_enabled"
+  when: "package_result.changed and not reboot_enabled"
   become: true
 
 #sudo dkms remove -m zfs -v 0.6.2 --all
@@ -135,7 +135,7 @@
 - name: Load the zfs module
   command: /sbin/modprobe zfs
   register: modprobe_result
-  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and ansible_distribution_version in ['12.04','14.04'] and "package_result|changed and not reboot_enabled"
+  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and ansible_distribution_version in ['12.04','14.04'] and "package_result.changed and not reboot_enabled"
   become: true
 
 #sudo modprobe zfs
